:lipstick: style algo form

--- a/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form-page-header/tasks-form-page-header.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form-page-header/tasks-form-page-header.component.less
@@ -9,7 +9,7 @@
 
 button.back {
 	position: absolute;
-	right: 20px;
+	left: 18px;
 	font-size: 20px;
 	margin-top: -4px;
 	color: white;
@@ -20,7 +20,7 @@ button.back {
 
 	&:hover {
 		color: @application-contrast-color;
-		right: 18px;
+		left: 14px;
 	}
 
 	&:active {
