--- a/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form-page-header/tasks-form-page-header.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form-page-header/tasks-form-page-header.component.html
@@ -1,3 +1,3 @@
-<button class="back" (click)="backToTable()" tooltip-value="Back" tooltip-class="left">
+<button class="back" (click)="backToTable()" tooltip-value="Back" tooltip-class="right">
 	<i class="fa fa-long-arrow-left"></i>
 </button>
