--- a/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
@@ -6,6 +6,7 @@
 	right: 5px;
 	display: flex;
 	justify-content: flex-end;
+	align-items: center;
 	max-width: 33%;
 
 	div {
@@ -16,6 +17,7 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
+		padding: 0 5px;
 
 		span.indicator {
 			width: 10px;
