--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -14,6 +14,8 @@
 	line-height: 24px;
 	color: white;
 	justify-content: space-between;
+	align-items: center;
+
 	&.with-background {
 		background: rgba(0, 0, 0, 0.6);
 		box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
