--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
@@ -11,6 +11,7 @@
 			border: none;
 			background-color: @background-color-5;
 			color: @background-color-12;
+			padding-left: 0;
 			i{
 				font-size: @icon-size;
 			}
@@ -29,6 +30,11 @@
 			button{
 				font-size: 0;
 				overflow: hidden;
+
+				&.small-icon-button{
+					padding: 0;
+					margin: 0;
+				}
 			}
 		}
 	}
