--- a/src/app/@ansyn/ansyn/less/common.less
+++ b/src/app/@ansyn/ansyn/less/common.less
@@ -10,6 +10,18 @@
 	overflow: hidden;
 }
 
+.base-share-link {
+	padding: 5px;
+	background: black;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	border: solid black 1px;
+	cursor: pointer;
+	transition: .3s;
+	display: flex;
+	align-items: center;
+}
 .scrolled{
 	&::-webkit-scrollbar {
 		width: 7px;
