compass style and etc

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -21,6 +21,7 @@
 		height: 100%;
 		color: white;
 		display: flex;
+		justify-content: space-between;
 
 		.selected-case {
 			button.share-link {
