--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -63,14 +63,18 @@
 			overflow: hidden;
 		}
 
-		&:not(.layout1) {
+		&:not(.layout1) { // TODO: create a side panel with all this element and set top only once.
 			/deep/ ansyn-imagery-rotation, /deep/ ansyn-map-search-box {
-				top: 50px;
+				top: @status-bar-height + 25;
 			}
 
 			// todo: map facade should not know this element
 			/deep/ ansyn-imagery-dimension-mode {
 				top: 150px;
+			}
+
+			/deep/ ansyn-imagery-zoomer {
+				top: 187px;
 			}
 		}
 
