--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -14,7 +14,7 @@
 		[attr.tooltip-value]="'Move' | translate"
 		tooltip-class="bottom"
 		(mousedown)="onMove.emit($event)">
-		<i class="fa fa-arrows"></i>
+		<i class="icon-drag"></i>
 	</button>
 
 	<button *ngIf="mapsAmount > 1"
