--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
@@ -61,7 +61,7 @@
 
 				i {
 					color: black;
-					font-size: @point-size - 10;
+					font-size: @point-size - 5;
 				}
 			}
 
@@ -133,16 +133,13 @@
 			display: flex;
 			justify-content: center;
 			width: @circle-diameter;
-			button:first-child {
-				transform: rotate(180deg);
-			}
-
 			button {
 				width: 30px;
 				height: 30px;
 				border: 1px solid @border-color;
 				background-color: @background-color;
 				margin: 5px;
+				padding: 0;
 				i {
 					color: @application-primary-color;
 				}
