--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -26,5 +26,5 @@
 		(click)="toggleDragged()"
 		[attr.tooltip-value]="this.draggedButtonText | translate"
 		[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'">
-	<i class="icon fa fa-arrows"></i>
+	<i class="icon-drag-map"></i>
 </button>
