working with config

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1227,5 +1227,8 @@
 			"regionLengthInMeters": 100
 		}
 	}
+  },
+  "anaglyphConfig": {
+  	"sensorNames": {{ getv "/ansyn/anaglyph/sensornames" "null" }}
   }
 }
