added button, no functionality

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -342,7 +342,8 @@
     },
 	 "httpTimeout": "3000",
 	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }},
-	 "enable3D": {{ getv "/ansyn/3d/enable" "true" }}
+	 "enable3D": {{ getv "/ansyn/3d/enable" "true" }},
+	 "showCredentials": {{getv "/showcredentials" "true"}}
   },
   "olConfig": {
   	 "needToUseLayerExtent": false,
