--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -7,7 +7,8 @@
 		<div class="maps-container" #animatedElementVertical>
 			<ansyn-imageries-manager></ansyn-imageries-manager>
 			<ansyn-context-menu *ngIf="renderContextMenu"></ansyn-context-menu>
-			<ansyn-credentials *ngIf="renderCredentials"></ansyn-credentials>
+			<ansyn-credentials class="credentials" *ngIf="renderCredentials"></ansyn-credentials>
+
 		</div>
 
 		<ansyn-footer
@@ -17,7 +18,6 @@
 		></ansyn-footer>
 	</div>
 </div>
-
 
 <ansyn-overlay-overview></ansyn-overlay-overview>
 
