--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -343,7 +343,7 @@
 	 "httpTimeout": "3000",
 	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }},
 	 "enable3D": {{ getv "/ansyn/3d/enable" "true" }},
-	 "showCredentials": {{getv "/showcredentials" "true"}}
+	 "showCredentials": {{getv "/ansyn/showCredentials" "true"}}
   },
   "olConfig": {
   	 "needToUseLayerExtent": false,
