--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -1,10 +1,10 @@
 @import 'ansyn/less/common';
-@import "ansyn/less/z-index-globals";
+@import 'ansyn/less/z-index-globals';
 
 .credentials-button{
 	position: relative;
 	z-index: @z-index-credentials;
 	height: 50px;
 	width:50px;
-	background-image: url("../../../../assets/logo_old.svg");
+	background: url('/assets/logo_old.svg');
 	}
