--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -1,3 +1,4 @@
-<button class="credentials-button">
+<button class="credentials-button" (click)="setIsOpenMode()">
 </button>
 
+<div *ngIf="isOpen"></div>
