--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -7,6 +7,7 @@
 		<div class="maps-container" #animatedElementVertical>
 			<ansyn-imageries-manager></ansyn-imageries-manager>
 			<ansyn-context-menu *ngIf="renderContextMenu"></ansyn-context-menu>
+			<ansyn-credentials class="credentials" *ngIf="renderCredentials"></ansyn-credentials>
 		</div>
 
 		<ansyn-footer
@@ -16,7 +17,6 @@
 		></ansyn-footer>
 	</div>
 </div>
-
 
 <ansyn-overlay-overview></ansyn-overlay-overview>
 
