--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
@@ -2,7 +2,7 @@
 	<button class="small-icon-button"
 			[attr.tooltip-value]="'Reset zoom' | translate"
 			tooltip-class="'left'"
-			(click)="resetZoom()">
+			(click)="one2one()">
 		1:1
 	</button>
 </div>
