fix cr change alertmsg to accept string add disable option

--- a/src/app/@ansyn/ansyn/modules/plugins/openlayers/plugins/anaglyph-sensor/alert-component/anaglyph-sensor-alert.component.less
+++ b/src/app/@ansyn/ansyn/modules/plugins/openlayers/plugins/anaglyph-sensor/alert-component/anaglyph-sensor-alert.component.less
@@ -8,7 +8,6 @@
 		height: 100%;
 		border-radius: 5px;
 		position: relative;
-		cursor: pointer;
 		border: none;
 		padding: 0 5px;
 		font-size: 12px;
@@ -25,6 +24,15 @@
 			height: 10px;
 			border-radius: 100%;
 			margin-right: 2px;
+		}
+
+		&:hover:not(:disabled) {
+			cursor: pointer;
+			background: rgba(0, 0, 0, 0.5);
+		}
+
+		&:disabled {
+			opacity: .6;
 		}
 	}
 }
