--- a/src/app/@ansyn/ansyn/modules/plugins/openlayers/plugins/anaglyph-sensor/alert-component/anaglyph-sensor-alert.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/openlayers/plugins/anaglyph-sensor/alert-component/anaglyph-sensor-alert.component.html
@@ -1,6 +1,7 @@
 <button
 	[attr.tooltip-value]="'Show Anaglyph' | translate"
 	tooltip-class="top"
+	[disabled]="isDisabled"
 	(click)="ShowAnaglyph()">
 	<span class="indicator"></span>
 	{{'Show Anaglyph' | translate}}
