--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -7,7 +7,7 @@
 		<div class="maps-container" #animatedElementVertical>
 			<ansyn-imageries-manager></ansyn-imageries-manager>
 			<ansyn-context-menu *ngIf="renderContextMenu"></ansyn-context-menu>
-			<ansyn-credentials class="credentials" *ngIf="renderCredentials"></ansyn-credentials>
+			<!--<ansyn-credentials class="credentials" *ngIf="renderCredentials"></ansyn-credentials>-->
 		</div>
 
 		<ansyn-footer
