change buttons order by creating floating menu

--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-dimension-mode/imagery-dimension-mode.component.less
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-dimension-mode/imagery-dimension-mode.component.less
@@ -2,12 +2,12 @@
 @import "ansyn/less/z-index-globals";
 
 :host {
-	position: absolute;
-	right: 40px;
-	top: 120px;
-	z-index: 1;
+	position: relative;
 	background-color: rgba(0, 0, 0, 0.3);
 	color: white;
+	left: 20px;
+	width: 40px;
+	margin-bottom: 5px;
 
 	.show {
 		padding: 4px;
