--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.less
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.less
@@ -2,11 +2,9 @@
 @import "ansyn/less/z-index-globals";
 
 :host {
-	position: absolute;
-	right: 40px;
-	top: 160px;
-	z-index: 1;
-
+	position: relative;
+	left: 20px;
+	width: 40px;
 
 	.buttons {
 		line-height: 0;
@@ -52,13 +50,3 @@
 		}
 	}
 }
-
-div.imageries-container {
-	&.layout2, &.layout3, &.layout4, &.layout5, &.layout6 {
-		:host {
-			top: 190px;
-		}
-	}
-}
-
-
