--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -9,7 +9,7 @@
 
 	<ansyn-imagery-tile-progress [mapId]="mapState.id" [lowered]="showStatus && active"></ansyn-imagery-tile-progress>
 
-	<ansyn-imagery-rotation [mapState]="mapState"></ansyn-imagery-rotation>
+	<ansyn-floating-menu [mapState]="mapState"></ansyn-floating-menu>
 
 	<ansyn-imagery-view [settings]="mapState"></ansyn-imagery-view>
 
