--- a/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.less
@@ -8,13 +8,11 @@
 :host {
 	width: @size + @border-width * 2;
 	height: @size + @border-width * 2;
-	position: absolute;
-	z-index: @z-index-map-rotation;
-	top: 20px;
-	right: 20px;
+	position: relative;
 	text-align: center;
 	user-select: none;
 	border-radius: 50%;
+	margin-bottom: 5px;
 
 	.tooltip-container {
 		width: @size;
