Add anaglyph sensor (#2549)
* working

* working with config

* fix cr

* fix cr change alertmsg to accept string add disable option

* fix tests

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1228,5 +1228,8 @@
 			"regionLengthInMeters": 100
 		}
 	}
+  },
+  "anaglyphConfig": {
+  	"sensorNames": {{ getv "/ansyn/anaglyph/sensornames" "null" }}
   }
 }
