--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
@@ -8,11 +8,7 @@
 		width: 100%;
 		padding: 45px 10px;
 		box-sizing: border-box;
-		height: 100%;
+		height: calc(100%- 20px);
 
-		.all-layers {
-			overflow-y: auto;
-			height: calc(~'100% - 5px');
-		}
 	}
 }
