switch bottom and top border

--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.less
@@ -63,8 +63,8 @@
 
 			&.top {
 				/deep/ button[ansynComboBoxTrigger] {
-					border-bottom: none;
-					border-top: 1px solid @transparent-color;
+					border-bottom: 1px solid @transparent-color;
+					border-top: none;
 				}
 			}
 		}
