--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -32,6 +32,7 @@
 	.buttons {
 		line-height: 0;
 		display: flex;
+		flex: 1;
 
 		button.drag-me {
 			background: transparent;
@@ -91,8 +92,9 @@
 		height: 100%;
 		max-width: 33%;
 		padding: 0 10px;
-		text-align: center;
+		justify-content: center;
 		display: flex;
+		flex: 1;
 
 		div {
 			text-overflow: ellipsis;
@@ -118,6 +120,8 @@
 	}
 
 	.notifications {
+		display: flex;
+		flex: 1;
 		padding: 5px;
 		min-width: 33%;
 	}
