title to center

--- a/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
@@ -1,13 +1,9 @@
 @import 'ansyn/less/colors';
 
 :host {
-	position: absolute;
-	top: 6px;
-	right: 5px;
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
 	align-items: center;
-	max-width: 33%;
 
 	div {
 		background: @background-color-6;
