--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -90,19 +90,11 @@
 
 	.description {
 		height: 100%;
-		max-width: 33%;
 		padding: 0 10px;
 		justify-content: center;
+		align-items: center;
 		display: flex;
 		flex: 1;
-
-		div {
-			text-overflow: ellipsis;
-			white-space: nowrap;
-			overflow: hidden;
-			display: flex;
-			align-items: center;
-		}
 
 		button.share-link {
 			&:extend(.base-share-link);
@@ -123,7 +115,7 @@
 		display: flex;
 		flex: 1;
 		padding: 5px;
-		min-width: 33%;
+	justify-content: flex-end;
 	}
 }
 
@@ -139,7 +131,14 @@
 		}
 
 		.description {
+			justify-content: flex-start;
 			padding-left: 0;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+		}
+
+		ansyn-popover {
+			width: 80px;
 		}
 	}
 }
