--- a/src/app/@ansyn/ansyn/components/overlay-out-of-bounds/overlay-out-of-bounds.component.html
+++ b/src/app/@ansyn/ansyn/components/overlay-out-of-bounds/overlay-out-of-bounds.component.html
@@ -1,6 +1,6 @@
 <button
 	[attr.tooltip-value]="'Back to overlay extent' | translate"
-	tooltip-class="top"
+	[attr.tooltip-class]="mapsAmount === 1 ? 'top left': 'bottom left'"
 	(click)="backToExtent()">
 	<span class="indicator" [style.background-color]="color"></span>
 	{{'Image is out of bounds' | translate}}
