--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.html
@@ -6,7 +6,7 @@
 		[active]="properties['fill-opacity']"
 		[activeDisabled]="!(properties['stroke-opacity'])"
 		(activeChange)="activeChange.emit({event: $event, label: 'fill'})"
-		(colorChange)="colorChange.emit({event: $event, label: 'fill'})">
+		(colorChange)="colorChange.emit([{event: $event, label: 'fill'}, {event: $event, label: 'marker-color'}])">
 	</ansyn-color-picker>
 
 	<ansyn-color-picker
@@ -14,7 +14,7 @@
 		[color]="properties.stroke"
 		[active]="properties['stroke-opacity']"
 		[activeDisabled]="!(properties['fill-opacity'])"
-		(colorChange)="colorChange.emit({event: $event, label: 'stroke'})"
+		(colorChange)="colorChange.emit([{event: $event, label: 'stroke'}])"
 		(activeChange)="activeChange.emit({event: $event, label: 'stroke'})">
 	</ansyn-color-picker>
 
