fix annotation frame

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -16,7 +16,12 @@
 	.ansyn-tree-view {
 		width: inherit;
 	}
-;
+
+	ansyn-imagery-status {
+		position: relative;
+		align-items: center;
+		justify-content: space-between;
+	}
 
 	.status-bar {
 		flex-grow: 1;
