--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -9,10 +9,10 @@
 }
 
 :host {
-	position: relative;
+	position: absolute;
 	z-index: @z-index-imagery-status;
 	display: flex;
-	flex-grow: 1;
+	width: 100%;
 	line-height: 24px;
 	color: white;
 	justify-content: space-between;
