fix angle filter hover button indication

--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
@@ -148,6 +148,17 @@
 				i {
 					color: @application-primary-color;
 				}
+
+				&:hover:not(:disabled) {
+					border-color: @application-contrast-color;
+					z-index: 2;
+					cursor: pointer;
+				}
+
+				&:disabled {
+					background-color: @background-color;
+					opacity: 0.7;
+				}
 			}
 		}
 
