disable annotation translation option when layers are hidden

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -24,6 +24,7 @@
 <button class="small-icon-button drag-mode" *ngIf="overlay"
 		[class.active2]="isDragged"
 		(click)="toggleDragged()"
+		[disabled]="!isLayersVisible"
 		[attr.tooltip-value]="this.draggedButtonText | translate"
 		[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'">
 	<i class="icon-drag-map"></i>
