add translate to all app

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -337,7 +337,11 @@
 		 	"alg_2": "name 2",
 		 	"geoRegistered": "Geo Registered",
 		 	"notGeoRegistered": "Not Geo Registered",
-			"poorGeoRegistered": "Poor Geo Registered"
+			"poorGeoRegistered": "Poor Geo Registered",
+			"AUTOSAVEON": "ON",
+			"AUTOSAVEOFF": "OFF",
+			"CaseName": "Name",
+			"TasksName": "Name"
 	   	}
     },
 	 "httpTimeout": "3000",
