--- a/src/app/@ansyn/ansyn/modules/menu-items/settings/settings/settings.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/settings/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div class="collection">
 	<ansyn-slider-checkbox [checked]="isAnaglyphEnabled$ | async"
 						   (checkedChange)="enableAnaglyph($event.target.checked)">
-		Ask for anaglyph (if available )
+		{{'Ask for anaglyph (if available )' | translate}}
 	</ansyn-slider-checkbox>
 </div>
