--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/image-processing-control/image-processing-control.component.html
@@ -1,6 +1,6 @@
 <div class="image-processing-container">
 	<div class="title-wrapper">
-		<label class="title">Manual Image Enhancement</label>
+		<label class="title">{{'Manual Image Enhancement' | translate}}</label>
 		<div class="resetAll" (click)="resetParams()">{{'Reset all' | translate}}</div>
 	</div>
 	<ul class="image-processing-options">
