--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -8,7 +8,7 @@
 		<ansyn-popover class="default-case" [text]="selectedCaseName" [icon]="icon">
 			<button class="share-link" (click)="copyLink()">
 				<i class="icon-status-bar-share-link"></i>
-				<span>Share link</span>
+				<span>{{'Share link' | translate}}</span>
 			</button>
 		</ansyn-popover>
 	</div>
