--- a/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-table-page-header/tasks-table-page-header.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-table-page-header/tasks-table-page-header.component.html
@@ -1,1 +1,1 @@
-<button ansynButton (click)="onNewTask()">New Task</button>
+<button ansynButton (click)="onNewTask()">{{'New Task' | translate}}</button>
