--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
@@ -1,5 +1,5 @@
 <form (submit)="onSubmit()" (reset)="resetError()">
-	<input type="text" placeholder="Search" [(ngModel)]="searchString" name="searchString" (input)="resetError()">
+	<input type="text" [placeholder]="'Search' | translate" [(ngModel)]="searchString" name="searchString" (input)="resetError()">
 	<button type="submit"><i class="fa fa-search"></i></button>
 	<button type="reset" [hidden]="!searchString"><i class="fa fa-times"></i></button>
 </form>
